# vdf

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.am  README  TODO  configure.ac  libvdf.pc.in
examples/: Makefile.am  create_drive.c  vdf_stream.c  vdf_stream2.c
extra/: nbd-3.0-devserver.patch
include/: vdf.h
libvdf/: Makefile.am  bootblock.c  drive.c  dump.c  fat.c  file.c  list.h  read.c  read_data.c  read_dir.c  transport.c  vdf_drive.h  vdf_file.h  vdf_private.h  vdf_read.h  vdf_sock.c  vdf_sock.h  vdf_transport.h
libvdf/transport/: nbd.h  nbd_client.c  nbd_server.c
msvc++/: create_drive.vcproj  libvdf.vcproj  vdf.sln  vdf_stream.vcproj  vdf_stream2.vcproj
